--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
     <h2>我的文章</h2>
     <ul>
       <li><a href="文章详细(田家元日).html">田家元日</a></li>
-      <li><a href="基础标签学习.html">基础标签学习</a></li> 
-      <!-- 可以添加更多最新文章 -->
+      <li><a href="基础标签学习.html">基础标签学习实操</a></li> 
+      <li><a href="标签的用法.html">标签的用法</a></li>
+      <!-- 可以添加更多文章 -->
     </ul>
   </div>
 
