--- a/标签的用法.html
+++ b/标签的用法.html
@@ -12,29 +12,56 @@
     <h2>
         标记介绍
     </h2>
-    <p>
-        &lt;常规标记&gt;也叫双标记<br>
-        &lt;标记 属性="属性值" 属性="属性值"&gt;&lt;标记&gt;<br>
-        标记也称作标签、元素<br>
-        例如：&lt;head&gt;&lt;/head&gt;<br>
-    </p>
-    <p>
-        空标记也叫单标记<br>
-        &lt;标记 /&gt;<br>
-        &lt;标记 属性="属性值" /&gt;<br>
-        例如：&lt;br /&gt;<br>
-    </p>
+         <p>
+             &lt;常规标记&gt;也叫双标记<br>
+            &lt;标记 属性="属性值" 属性="属性值"&gt;&lt;标记&gt;<br>
+            标记也称作标签、元素<br>
+            例如：&lt;head&gt;&lt;/head&gt;<br>
+        </p>
+        <p>
+            空标记也叫单标记<br>
+            &lt;标记 /&gt;<br>
+            &lt;标记 属性="属性值" /&gt;<br>
+            例如：&lt;br /&gt;<br>
+         </p>
     <h2>
         以&lt;hr>标签为例<br>
     </h2>
-    <p>
-        &lt;hr color="green" width="300" align="left"&gt;<br>
-        color（颜色）为属性，green为属性值<br>
-        width（宽度）为属性，300为属性值，为像素长度<br>
-        align（靠向）为属性，left为属性值<br>\
-        线条默认有阴影使用noshade可消除阴影<br>
+         <p>
+            &lt;hr color="green" width="300" align="left"&gt;<br>
+            color（颜色）为属性，green为属性值<br>
+            width（宽度）为属性，300为属性值，为像素长度<br>
+            align（靠向）为属性，left为属性值<br>\
+            线条默认有阴影使用noshade可消除阴影<br>
+        </p>
+    <center><h1>div和span标签</h1></center>
+        <p>
+            div在没有任何其他东西改变时默认独占一行没有具体含义<br>
+            span文本修饰使用，内容有多宽就占用多宽的空间，没有实际意义&lt;span 样式 &gt;内容&lt;/span&gt;
+        </p>
+    <center><h1>列表</h1></center>
+        <p>
+            <h2>无序列表</h2>
+            &lt;ul&gt;<br>
+            &emsp;&emsp;&lt;li&gt;无序列表&lt;/li&gt;<br>
+            &emsp;&emsp;&lt;li&gt;无序列表&lt;/li&gt;<br>
+            &lt;ul&gt;<br>
 
 
-    </p>
+        </p>
+    <h2>有序列表</h2>
+        <p>
+            &lt;ol&gt;<br>
+            &emsp;&emsp;&lt;有序列表&gt;<br>
+            &emsp;&emsp;&lt;有序列表&gt;<br>
+            &lt;/ol&gt;
+        </p>
+    <h2>自定义列表</h2>
+        <p>
+            &lt;dl&gt;<br>
+            &emsp;&emsp;&lt;dt&gt;可以是文字也可以图片&lt;/dt&gt;<br>
+            &emsp;&emsp;&lt;dd&gt;可以是文字也可以图片&lt;/dd&gt;<br>
+            &lt;/dl&gt;
+        </p>
 </body>
 </html>
