--- a/标签的用法.html
+++ b/标签的用法.html
@@ -56,6 +56,17 @@
             &emsp;&emsp;&lt;有序列表&gt;<br>
             &lt;/ol&gt;
         </p>
+        <ol>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
+          </ol>
+          <p>
+            1.因为样式问题没有显示序号后续更改。<br>
+            2.ol里面只能使用li标签，但是li里面可以使用其他的标签，其中的数字是自动生成的。<br>
+            3.ol支持的属性：type（只支持1、A、a、i、I（最后两个为罗马数字））、start（从指定位置开始只支持输入数字，与<br>
+            type搭配使用在字母中start输入超过26使用双字母）
+          </p>
     <h2>自定义列表</h2>
         <p>
             &lt;dl&gt;<br>
