--- a/index.html
+++ b/index.html
@@ -140,11 +140,16 @@
 
   <div class="container">
     <h2>我的文章</h2>
+    <h3>网页相关</h3>
     <ul>
       <li><a href="文章详细(田家元日).html">田家元日</a></li>
       <li><a href="基础标签学习.html">基础标签学习实操</a></li> 
       <li><a href="标签的用法.html">标签的用法</a></li>
       <!-- 可以添加更多文章 -->
+    </ul>
+    <h3>其他</h3>
+    <ul>
+        <li><p>暂无内容</p></li>
     </ul>
   </div>
 
