--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 </head>
 <body>
   <header>
-    <h1>欢迎来到XYZN的个人博客</h1>
-    <p>这里记录了我学习、思考和生活的点滴</p>
+    <h1>欢迎来到XYZN的个人网站</h1>
   </header>
 
   <nav>
