--- a/index.html
+++ b/index.html
@@ -5,133 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XYZN的个人网站</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #f4f4f4;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #333;
-      padding: 0.5rem 1rem;
-      transition: background-color 0.3s ease;
-    }
-
-    nav a:hover {
-      background-color: #333;
-      color: #fff;
-    }
-
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 1rem;
-    }
-
-    .container h2 {
-      border-bottom: 2px solid #333;
-      padding-bottom: 0.5rem;
-    }
-
-    .container ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .container li {
-      margin-bottom: 1rem;
-    }
-
-    .container a {
-      color: #333;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    .container a:hover {
-      color: #666;
-    }
-
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-    }
-
-    /* 添加一些响应式样式 */
-    @media screen and (max-width: 600px) {
-      nav {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      nav a {
-        flex: 1 0 50%;
-      }
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #f4f4f4;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #333;
-      padding: 0.5rem 1rem;
-    }
-
-    nav a:hover {
-      background-color: #333;
-      color: #fff;
-    }
-
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 1rem;
-    }
-
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-    }
-  </style>
+  <link rel="stylesheet" href="主页.css">
 </head>
 
 <body>
