--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XYZN的个人网站</title>
-  <link rel="stylesheet" href="主页.css">
+  <link rel="stylesheet" href="css存储/主页.css">
 </head>
 
 <body>
