--- a/基础标签学习.html
+++ b/基础标签学习.html
@@ -41,7 +41,7 @@
         <strong>本文章使用了 del (s)删除线，h1-7的标题，strong(b)的加粗强调文本，em(i)的倾斜强调文本，sup上标（未包含sub下标），<br>
                 br换行，hr水平线，p段落标签，未使用u下划线。</strong>
     </p>
-    <a href="文本.docx" download>文本下载</a>
+    <a href="文章/文本.docx" download>文本下载</a>
 </p>
 </body>
 </html>
