--- a/文章详细(田家元日).html
+++ b/文章详细(田家元日).html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>文章详情页</title>
-  <link rel="stylesheet" href="文章css.css"> <!-- 引用外部CSS文件 -->
+  <link rel="stylesheet" href="css存储/文章css.css"> <!-- 引用外部CSS文件 -->
   <title>田家元日</title>
   	<style>
   		/* 按钮的基本样式 */
