准备进行主页更改
主页还在施工期

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </ul>
   </div>
   <footer>
-    <p> XYZN 版权所有 © 2023</p>
+      <p>XYZN 版权所有 © 2023-
+        <script>document.write(new Date().getFullYear());</script>
+      </p>
   </footer>
 </body>
 
